예약관리를 다시 생각하자.